--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.0
 homepage: https://github.com/evant/streamqflite
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.2.6
+  sqflite: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
