--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.0.3+1
+  sqflite: ^2.0.3
 
 dev_dependencies:
   flutter_test:
